This resolves the issue on the player-side of the widget. Both audio, image, and video assets appear and function on the player-side. There are some stying concerns that have resulted, however, in regards to the images appearing big enough to require vertical and horizontal scrollbars.

--- a/player.less
+++ b/player.less
@@ -581,15 +581,28 @@ body {
 							}
 						}
 					}
-					.image {
+					.asset {
 						margin-top : -300px;
-						img {
-							max-width : 500px;
+
+						audio {
+							border : 5px solid #FFFF00;
+							max-width : 50%;
 							&.title, &.description { display : none; }
 							&.no-text { max-height : 300px; }
 							&.mixed {
-								margin-top : 40px;
+								margin-top : 25%;
 								max-height: 250px;
+							}
+						}
+						
+						img {
+							border : 5px solid #FFFF00;
+							max-width : 100px;
+							&.title, &.description { display : none; }
+							&.no-text { max-height : 100px; }
+							&.mixed {
+								margin-top : 40px;
+								max-height: 100px;
 							}
 						}
 					}
